# market-lens

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  mcp.servers.example.json  pyproject.toml  run.ps1  run.sh
backtests/manifests/: csi300-pilot-2020-2021.json
docs/: BACKTESTING.md  MCP_GATEWAY.md  TOOL_APPROVALS.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
market_lens/: __init__.py  cli.py  config.py  types.py
market_lens/agent/: __init__.py  chat_agent.py  llm_client.py  market_agent.py  tool_orchestrator.py
market_lens/api/: app.py  auth.py  schemas.py
market_lens/backtesting/: __init__.py  collector.py  engine.py  io.py  models.py  universe.py  universe_source.py
market_lens/capabilities/: __init__.py
market_lens/data/: eastmoney.py
scripts/: setup-time-mcp.ps1
supabase/: config.toml  seed.sql
tests/: test_api_app.py  test_backtest_collector.py  test_backtest_universe_source.py  test_backtesting.py  test_chat_agent.py  test_code_tools.py  test_commodity_history.py  test_config.py  test_daytona_sandbox.py  test_daytona_sandbox_integration.py  test_detailed_financials.py  test_deterministic_routing.py  test_eastmoney_parsers.py  test_llm_client.py  test_llm_tool_integration.py  test_mcp_gateway.py  test_mcp_time_integration.py  test_metrics.py  test_reit_data.py  test_research_context.py  test_sandbox.py  test_sandbox_docker_integration.py  test_scoring.py  test_supabase.py  test_tool_approval_flow.py  test_tool_orchestrator.py  test_tools.py  test_workspace_tools.py
(+78 files in other folders)
